# mark-ii-sandbox

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.browser  Dockerfile.camera  Dockerfile.core1  Dockerfile.dinkum  Makefile  README.md  update-image.sh
boot/: config.txt  userconf.txt
dbus-hal/: dbus_server.py  install.sh  requirements.txt  run.sh
dbus-hal/dbus_hal/: __init__.py  __main__.py  amp.py  buttons.py  dbus_interfaces.py  events.py  fan.py  leds.py  mark2.py
docker/: packages-build.txt  packages-core1.txt  packages-dev.txt  packages-run.txt  packages-venv.txt
files-core1/etc/systemd/system/: mark2-core1.service
files-core1/home/pi/: .bash_profile
files/etc/: mpd.conf
files/etc/X11/xorg.conf.d/: power.conf
files/etc/pulse/: daemon.conf
files/etc/xdg/: kcmfonts  kdeglobals  kscreensaverrc  ksmserverrc  kwinrc  plasma-nm  plasmashellrc
files/opt/grokotron/: sentences.ini
files/opt/mycroft/: .camerarc
mimic3-cpp/: .gitignore  CMakeLists.txt  Makefile
mimic3-cpp/mimic3/: CMakeLists.txt  main.cpp  phonemize.hpp  synthesize.hpp
mimic3/docker/: mimic3-download
mimic3/mimic3_tts/: tts.py  voice.py
raspberry-pi-os/: img2tar.py  partition_table.txt
vocalfusion/: Makefile  build.sh  install.sh  run.sh  setup_microphone.py  setup_speakers.py
vocalfusion/etc/: mark2-microphone.service
vocalfusion/vocalfusion-rpi-setup-5.2.0/: CHANGELOG.md  README.md  setup.sh
vocalfusion/vocalfusion-rpi-setup-5.2.0/resources/: 99-xmos.rules  asoundrc_vf  asoundrc_vf_stereo  asoundrc_vf_xvf3510_int  asoundrc_vf_xvf3510_ua
(+592 files in other folders)
